# teachermate

./: .gitignore  README.md  pyproject.toml
.claude/skills/research-deliverables/: SKILL.md
.claude/skills/teacher-deliverables/: SKILL.md
app/: __init__.py  main.py  models.py  settings.py
app/services/: __init__.py  chat_markdown.py  claude_agent.py  markdown_conversion.py  storage.py
app/static/: app.css
app/templates/: base.html  index.html  workspace_page.html
app/templates/partials/: chat_runtime.html  compile_runtime.html  generation_runtime.html  workspace.html
deploy/: README.md  install.sh
deploy/nginx/: teachermate.conf
deploy/systemd/: teachermate.env.example  teachermate.service
tests/: test_chat_markdown.py  test_main.py  test_markdown_conversion.py  test_storage.py
