[project]
name = "teachermate"
version = "0.1.0"
description = "Single-user teacher knowledge base MVP built on karpathy-llm-wiki and Claude Agent SDK"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115.0",
  "uvicorn>=0.34.0",
  "jinja2>=3.1.0",
  "python-multipart>=0.0.20",
  "markitdown[all]>=0.1.5",
  "claude-agent-sdk>=0.1.59",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.pytest.ini_options]
testpaths = ["tests"]
